--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-  .btn {
-    @apply w-1/2 h-12  text-black uppercase text-xl;
+  .skill {
+    @apply bg-[#96b983] text-lg py-2 px-4 w-fit rounded-md;
   }
 }
 
@@ -20,7 +20,84 @@ body {
   overflow-x: hidden;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 500px;
+  background: #f1f1f1;
+  margin: 100px auto 0;
+  border: 1px solid rgba(0, 0, 0, 0.274);
+}
+
+.left-list {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.right-list {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.bloc-tabs {
+  display: flex;
+}
+.tabs {
+  padding: 15px;
+  text-align: center;
+  width: 100%;
+  background: rgb(188, 187, 187);
+  cursor: pointer;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.274);
+  box-sizing: content-box;
+  position: relative;
+  outline: none;
+}
+.tabs:not(:last-child) {
+  border-right: 1px solid rgba(0, 0, 0, 0.274);
+}
+
+.active-tabs {
+  background: rgba(240, 230, 34);
+  border-bottom: 1px solid transparent;
+}
+
+.active-tabs::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(100% + 2px);
+  height: 5px;
+  background: rgb(88, 147, 241);
+}
+
+button {
+  border: none;
+}
+.content-tabs {
+  flex-grow: 1;
+}
+.content {
+  background: white;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+.active-content {
+  display: block;
 }
