--- a/proiect-final/styles/Product.module.css
+++ b/proiect-final/styles/Product.module.css
@@ -1,5 +1,58 @@
 .image_size {
-    height: 10rem;
-    width: 10rem;
+    height: 15rem;
+    width: 15rem;
     border: 5px solid red;
+}
+
+.prod {
+    
+    width: 20vw;
+    background-color: pink;
+    border-radius: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.button {
+    background-color: aqua;
+    border-radius: 0.7rem;
+    padding: 0.1rem 0.8rem;
+}
+.price_add {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    background-color: green;
+}
+.name_price {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: 20vw;
+}
+.product_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+.button_counter {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 0.5rem;
+}
+.product_name, .product_price {
+    font-size: large;
+    font-weight: bold;
 }
