--- a/proiect-final/styles/TabNav.module.css
+++ b/proiect-final/styles/TabNav.module.css
@@ -1,23 +1,27 @@
 .tab_nav {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 1rem;
     padding: 1rem;
+    height: 6vh;
+    width: 25vw;
 }
 .tab_nav_elements {
     display: flex;
     flex-direction: row;
     gap: 2rem;
+    background-color: yellow;
 }
 .tab_nav_button {
     font-size: large;
     font-weight: bold;
     padding: 0.5rem 1rem;
     border-radius: 1rem;
-    background-color: rgb(227, 207, 207);
+    background-color: rgb(159, 159, 161);
     cursor: pointer;
+    
 }
 .tab_nav_button:hover {
     box-shadow: 0.5rem 0.5rem 0.5rem 0.2rem rgba(139, 141, 141, 0.5);
@@ -30,7 +34,14 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding: 1rem;
     border-radius: 2rem;
-
+    background-color: aqua;
 }
 
+.components {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
   
