--- a/proiect-final/styles/Footer.module.css
+++ b/proiect-final/styles/Footer.module.css
@@ -6,10 +6,10 @@
     gap: 1rem;
     padding: 1.5rem;
     margin-block-start: 1rem;
-    background-color: rgb(227, 207, 207);
+    background-color: #de82a2;
 }
 
 .footer_text {
-    height: 5rem;
+    height: 3rem;
     margin-inline-end: 0;
 }
