--- a/proiect-final/styles/Basket.module.css
+++ b/proiect-final/styles/Basket.module.css
@@ -6,7 +6,6 @@
 }
 .row {
     width: 30vw;
-    background-color: pink;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -17,4 +16,15 @@
     background-color: red;
     font-weight: bold;
     border: 1px solid black;
+}
+.final_order {
+    margin-inline: auto;
+    width: 15vw;
+    background-color: pink;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding:0.5rem 0rem;
+    border-radius: 0.5rem;
 }
