--- a/proiect-final/styles/Description.module.css
+++ b/proiect-final/styles/Description.module.css
@@ -1,9 +1,16 @@
 .description_text {
-    font-size: large;
+    font-size: 1rem;
     font-weight: bold;
     text-align: center;
     width: 70vw;
     margin: 0 auto;
     padding: 1rem;
     border-radius: 1rem;
+}
+
+@media (min-width: 800px) {
+    .description_text {
+        font-size: 1.2rem;
+    }
+    
 }
