--- a/proiect-final/styles/Form.module.css
+++ b/proiect-final/styles/Form.module.css
@@ -1,15 +1,13 @@
 .background {
-    background-color: #f1abd1;
+    background-image:url("../public/pink_peonies.png");
+    object-fit: contain;
+    background-repeat: no-repeat;
+    margin-inline: auto;
 }
-
 .title {
     text-align: center;
     font-size: 2rem;
     padding: 1rem;
-}
-.input {
-    max-width: 50rem;
-    background-color: aqua;
 }
 .contact_form {
     display: flex;
@@ -17,35 +15,34 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    width: 40%;
+    width: 50%;
     padding: 1rem;
     border-radius: 2rem;  
     gap: 2rem;
     margin-inline: auto;
 }
 .contact_form:hover {
-    box-shadow: 0.5rem 0.5rem 0.5rem 0.2rem rgba(212, 214, 214, 0.5);
-    background-color: rgb(239, 236, 236);
+    background-color: rgb(239, 236, 236, 0.8);
 }
 .form_group {
     padding: 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 20vw;
+    width: 90vw;
     gap: 0.2rem;
 }
 .form-group input {
-    min-width: 10vw;
+    width: 10vw;
     border-radius: 0.3rem;
 }
 .checkbox-group {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 1rem;
+    gap: 3rem;
 }
 .textarea {
     width: 100%;
@@ -55,7 +52,7 @@
     border-radius: 0.3rem;
 }
 .btn_group {
-    width: 30vw;
+    width: 90vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -66,5 +63,17 @@
     background-color: pink;
     border-radius: 0.3rem;
     padding: 0.2rem 0.8rem;
+    font-weight: bold;
 }
 
+@media (min-width: 700px) {
+    .contact_form {
+        width: 40vw;;
+    }
+    .form-group {
+        width: 60vw;
+    }
+    .btn_group {
+        width: 40vw;
+    }
+}
