--- a/proiect-final/styles/Product.module.css
+++ b/proiect-final/styles/Product.module.css
@@ -18,6 +18,7 @@
     background-color:rgb(220, 216, 216);
     border-radius: 0.7rem;
     padding: 0.1rem 0.8rem;
+    font-size: 1rem;
 }
 .price_add {
     width: 100%;
@@ -35,6 +36,7 @@
     align-items: center;
     gap: 1rem;
     width: 20vw;
+    font-size: 10.5rem;
 }
 
 .button_counter {
@@ -46,6 +48,6 @@
     padding: 0.5rem;
 }
 .product_name, .product_price {
-    font-size: large;
+    font-size: 1rem;
     font-weight: bold;
 }
