--- a/proiect-final/styles/TabNav.module.css
+++ b/proiect-final/styles/TabNav.module.css
@@ -6,7 +6,6 @@
     gap: 1rem;
     padding: 1rem;
     height: 6vh;
-    width: 25vw;
 }
 .tab_nav_elements {
     display: flex;
@@ -15,9 +14,9 @@
     background-color: yellow;
 }
 .tab_nav_button {
-    font-size: large;
+    font-size: 1rem;
     font-weight: bold;
-    padding: 0.5rem 1rem;
+    padding: 0.2rem 1rem;
     border-radius: 1rem;
     background-color: rgb(159, 159, 161);
     cursor: pointer;
@@ -44,4 +43,8 @@
     align-items: center;
     padding: 1rem;
 }
-  
+@media (min-width: 800px) {
+    .tab_nav_button {
+        font-size: large;   
+    }
+}
