--- a/proiect-final/styles/Form.module.css
+++ b/proiect-final/styles/Form.module.css
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    width: 50%;
+    width: 90%;
     padding: 1rem;
     border-radius: 2rem;  
     gap: 2rem;
@@ -40,9 +40,9 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    gap: 3rem;
+    gap: 1rem;
 }
 .textarea {
     width: 100%;
@@ -52,7 +52,7 @@
     border-radius: 0.3rem;
 }
 .btn_group {
-    width: 90vw;
+    width: 100vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -66,14 +66,32 @@
     font-weight: bold;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 400px) {
+    .form_group {
+        width: 80vw;
+    }
+  }
+@media (min-width: 600px) {
+    .contact_form {
+        width: 70vw;;
+    }
+    .form_group {
+        width: 60vw;
+    }
+}
+@media (min-width: 800px) {
+    .contact_form {
+        width: 60vw;;
+    }
+    .form_group {
+        width: 50vw;
+    }
+}
+@media (min-width: 1000px) {
     .contact_form {
         width: 40vw;;
     }
-    .form-group {
-        width: 60vw;
-    }
-    .btn_group {
-        width: 40vw;
+    .form_group {
+        width: 28vw;
     }
 }
