--- a/proiect-final/styles/Form.module.css
+++ b/proiect-final/styles/Form.module.css
@@ -16,6 +16,7 @@
     align-items: center;
     gap: 2rem;
     width: 90%;
+    height: 100%;
     padding: 1rem;
     border-radius: 2rem;  
     gap: 2rem;
