--- a/proiect-final/styles/Form.module.css
+++ b/proiect-final/styles/Form.module.css
@@ -1,5 +1,5 @@
 .background {
-    background-image:url("../public/pink_peonies.png");
+    background-image:url("../images/pink_peonies.png");
     object-fit: contain;
     background-repeat: no-repeat;
     margin-inline: auto;
