--- a/styles/container/expression.module.scss
+++ b/styles/container/expression.module.scss
@@ -7,12 +7,8 @@
         grid-row: 1/2;
         grid-column: 1/2;
     }
-    .expressionsList {
+    .ExpressionPage {
         display: grid;
         justify-items: center;
-
-        .end {
-            margin-block: 1.5em;
-        }
     }
 }
