--- a/styles/header/searchform.module.scss
+++ b/styles/header/searchform.module.scss
@@ -1,11 +1,11 @@
 .theSearch {
     display: flex;
-    grid-row: 2/3;
+    grid-row: 3/4;
     grid-column: 1/3;
     flex-direction: column;
     height: 80%;
     max-height: 2.4em;
-    margin-block: auto;
+    margin-block-end: 1em;
     margin-inline: 1em;
     @media screen and (min-width: 48em) {
         grid-row: 1/3;
@@ -13,6 +13,7 @@
         max-width: 32em;
         height: 100%;
         max-height: 2.4em;
+        margin-block: auto;
     }
     .searchForm {
         display: flex;
@@ -44,8 +45,10 @@
         }
     }
     .dropdown {
-        position: absolute;
-        background-color: red;
+        margin-top: 0.1em;
+        backdrop-filter: blur(1em);
+        border: 0.0625em solid var(--fourth-color);
+        background-color: transparent;
         border-radius: 0.5em;
         z-index: 2;
     }
