--- a/proiect-final/styles/Footer.module.css
+++ b/proiect-final/styles/Footer.module.css
@@ -1,15 +1,42 @@
 .footer {
+    height: 8rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     gap: 1rem;
-    padding: 1.5rem;
+    padding: 0.5rem;
     margin-block-start: 1rem;
+    margin-block-end: 0rem;
     background-color: #de82a2;
+    object-fit: contain;
+}
+.heart {
+    font-size: 0.8rem;
+    animation: heart 3s infinite;
+    color: red;
 }
 
-.footer_text {
-    height: 3rem;
-    margin-inline-end: 0;
+@keyframes heart {
+    0% {
+        animation-timing-function: linear;
+        font-size: 1rem;
+    }
+    40% {
+        animation-timing-function: linear;
+        font-size: 1.5rem;
+    }
+    60% {
+        animation-timing-function: linear;
+        font-size: 1.6rem;
+    }
+    80% {
+        animation-timing-function: linear;
+        font-size: 1.8rem;
+    }
+    100% {
+        animation-timing-function: linear;
+        font-size: 1rem;
+    }
+    
 }
