--- a/proiect-final/styles/ProductGroup.module.css
+++ b/proiect-final/styles/ProductGroup.module.css
@@ -3,8 +3,9 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 2.2rem;
     flex-wrap: wrap;
+    padding-block: 1rem 2rem;
 }
 .title_products {
     text-align: center;
