--- a/proiect-final/styles/AboutUs.module.css
+++ b/proiect-final/styles/AboutUs.module.css
@@ -7,7 +7,7 @@
 }
 .image {
     display: block;
-    width: 35vw;
+    width: 65vw;
     height: auto;
     object-fit: contain;
     margin-inline: auto;
@@ -17,10 +17,14 @@
 @media (min-width: 800px) {
     .text {
         width: 80%;
+        font-size: 1.2rem;
     }
 }
 @media (min-width: 1000px) {
     .text {
-        width: 60%;
+        width: 50vw;
+    }
+    .image {
+        width: 40vw;
     }
 }
