--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,6 +35,10 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+nav {
+  margin-top: -5px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -63,7 +67,7 @@ a {
   padding: 15px;
   text-align: center;
   width: 100%;
-  background: rgb(188, 187, 187);
+  background: rgb(90, 130, 186, 0.3);
   cursor: pointer;
   border-bottom: 1px solid rgba(0, 0, 0, 0.274);
   box-sizing: content-box;
@@ -75,7 +79,7 @@ a {
 }
 
 .active-tabs {
-  background: rgba(240, 230, 34);
+  background: rgba(167, 139, 250);
   border-bottom: 1px solid transparent;
 }
 
@@ -88,7 +92,7 @@ a {
   transform: translateX(-50%);
   width: calc(100% + 2px);
   height: 5px;
-  background: rgb(88, 147, 241);
+  background: #eeec44;
 }
 
 button {
