--- a/proiect-final/styles/Product.module.css
+++ b/proiect-final/styles/Product.module.css
@@ -1,20 +1,3 @@
-.product_list {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 2.2rem;
-    flex-wrap: wrap;
-    padding-block: 1rem 2rem;
-}
-.title_products {
-    text-align: center;
-    color: palevioletred;
-    font-family: cursive;
-    display: block;
-    width: 100%;
-    padding: 1rem;
-}
 .prod {
     height: auto;
     border-radius: 1rem;
@@ -23,9 +6,19 @@
     justify-content: center;
     align-items: center;
     margin-inline: auto;
+    gap: 0.5rem;
 }
 .prod:hover {
     box-shadow: 0.5rem 0.5rem 0.5rem 0.2rem rgba(139, 141, 141, 0.5);
+}
+.price_add {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    background-color: green;
 }
 .name_price {
     display: flex;
@@ -34,8 +27,9 @@
     align-items: center;
     gap: 1rem;
     font-size: 1rem;
-    padding-block: 1rem;
+    padding-block-start: 0.5rem;
 }
+
 .button_counter {
     display: flex;
     flex-direction: row;
@@ -69,24 +63,27 @@
     border-radius: 0.3rem;
     border: 2px solid black;
 }
-.image_properties {
-    height: 15rem;
-    width: 15rem;
-    object-fit: cover;
+.prod_quantity {
+    width: 10rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
-.image_name {
-    font-size: large;
+.product_quantity_add_remove {
+    padding-block-end: 0.5rem;
+}
+.button_add_remove, .product_span {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+    width: 2rem;
+    background-color:  rgb(216, 146, 186);
+    border: none;
+    border-radius: 0.5rem;
     font-weight: bold;
-}
-.image_price {
-    font-size: medium;
-}
-.basket_image_properties {
-    width: 2.5rem;
-    border-radius: 50%;
-}
-@media (min-width: 400px) {
-    .product {
-        width: 40%;
-    }
+    font-size: 1rem;
 }
