--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,3 +30,8 @@ a {
 .default-button {
   @apply rounded bg-red-200 py-2  px-4 text-black shadow outline-none hover:bg-gray-200  active:bg-gray-300;
 }
+
+.carousel {
+  display: inline-flex;
+  overflow-x: hidden;
+}
