--- a/styles/container/modal.module.scss
+++ b/styles/container/modal.module.scss
@@ -1,6 +1,5 @@
-.successPopup {
+.popup {
     position: absolute;
-    background-color: rgba(58, 158, 33, 0.881);
     top: 80%; 
     right: 50%;
     transform: translate(50%,-50%);
@@ -13,8 +12,16 @@
     }
   }
   
-  .successPopup p {
+  .popup p {
     font-size: 1.5rem;
     color: var(--text-color);
     padding: 1em;
+  }
+
+  .succes {
+    background-color: rgba(58, 158, 33, 0.881);
+  }
+
+  .fail {
+    background-color: rgba(210, 64, 64, 0.881);
   }
