--- a/styles/header/searchform.module.scss
+++ b/styles/header/searchform.module.scss
@@ -51,5 +51,24 @@
         background-color: transparent;
         border-radius: 0.5em;
         z-index: 2;
+        ul {
+           text-align: left;
+           margin: 1em;
+           padding: 0;
+           a {
+              all: unset;
+              button {
+                all: unset;
+                display: block;
+                font-size: 1em;
+                width: 100%;
+                height: 100%;
+              }
+              span {
+                font-size: 1.2em;
+                font-weight: bold;
+              }
+           }
+        }
     }
 }
