--- a/styles/header/navbar.module.scss
+++ b/styles/header/navbar.module.scss
@@ -8,6 +8,7 @@
     width: 100%;
     height: 100%;
     backdrop-filter: blur(2em);
+    -webkit-backdrop-filter: blur(2em);
     background-color: transparent;
     padding: 20px;
     transition: left 0.3s;
