--- a/proiect-final/styles/Form.module.css
+++ b/proiect-final/styles/Form.module.css
@@ -66,6 +66,20 @@
     border-radius: 0.3rem;
     padding: 0.2rem 0.8rem;
     font-weight: bold;
+    height: auto;
+}
+.thanks_message {
+    text-align: center;
+    font-weight: bold;
+    font-size: 2rem;
+}
+.form_message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    height: 65vh;
 }
 @media (min-width: 400px) {
     .form_group {
