--- a/styles/base.css
+++ b/styles/base.css
@@ -20,7 +20,7 @@
     --clickable-color: #2D6A9F;
 
     --button-color: #f1faee;
-    --button-color-hover: #889ac9;
+    --button-color-hover: #96aeec;
 }
 html, body{
     width: 100%;
