--- a/auto-dealer/styles/globals.css
+++ b/auto-dealer/styles/globals.css
@@ -41,6 +41,7 @@ p {
   color: #fff;
   font-family: "Inter", sans-serif;
 }
+
 .footer-address {
   font-size: 0.85rem;
 }
@@ -78,6 +79,7 @@ p {
   height: auto;
   width: 100vw;
 }
+
 .carousel-img3 {
   height: auto;
   width: 100vw;
@@ -99,6 +101,7 @@ p {
   padding: 3rem 4rem;
   gap: 2rem;
 }
+
 welcome-text {
   font-size: 1rem;
   font-family: "Inter", sans-serif;
@@ -108,6 +111,7 @@ welcome-text {
   width: 50vw;
   height: auto;
 }
+
 .showroom-image-sm {
   display: none;
 }
@@ -121,9 +125,11 @@ welcome-text {
     flex-direction: column;
     align-items: center;
   }
+
   .showroom-image {
     display: none;
   }
+
   .showroom-image-sm {
     display: block;
     width: 100vw;
@@ -138,6 +144,57 @@ welcome-text {
   height: auto;
 }
 
+.showroom-img-contact {
+  width: 35%;
+  height: auto;
+}
+
+.location-layout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  height: auto;
+  background-color: #000;
+  padding: 4rem 1rem;
+}
+
+.location-title {
+  font-size: 1.75rem;
+  font-weight: bold;
+  font-family: "Inter", sans-serif;
+}
+
+.location-group-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-block-start: 1px solid #000;
+  padding: 2.5rem;
+}
+
+.small-group {
+  display: flex;
+  flex-direction: row;
+  align-content: flex-start;
+  gap: 1rem;
+}
+
+.location-subtitle {
+  font-size: 2rem;
+}
+
+.category-title {
+  font-weight: bold;
+}
+
+.logo-black {
+  width: 7rem;
+  height: auto;
+  padding-block-start: 1.25rem;
+}
+
 /* FORM */
 
 .form-container {
@@ -147,6 +204,7 @@ welcome-text {
   gap: 1rem;
   margin-block: 2.5rem;
 }
+
 .form-layout {
   display: flex;
   flex-direction: column;
@@ -260,7 +318,6 @@ welcome-text {
 .car-page-layout {
   display: flex;
   flex-direction: column;
-
   align-items: center;
   width: 60vw;
   gap: 2rem;
@@ -324,6 +381,11 @@ welcome-text {
   margin: 0;
 }
 
+.recent-car-text {
+  font-weight: 600;
+  color: #989898fe;
+}
+
 /* ABOUT*/
 
 .about-image,
@@ -338,24 +400,28 @@ welcome-text {
   justify-content: center;
   padding: 3.5rem;
 }
+
 .about-text {
   font-size: 1.75rem;
   font-weight: lighter;
   margin: 0;
 }
+
 .team-layout {
   background-color: #fff;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-block-end: 2rem;
+  padding-block-end: 2rem;
 }
+
 .personal-text,
 .person-group {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 .person-group {
   gap: 1rem;
 }
@@ -369,4 +435,23 @@ welcome-text {
   margin: 0;
   font-weight: bold;
   font-size: 1.25rem;
+}
+
+/* AWARDS */
+
+.awards-layout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-block: 1.25rem;
+  /* border-block-start: 4px solid #bda96b; */
+}
+.awards-title {
+  font-size: 1.75rem;
+  font-weight: lighter;
+  color: #fff;
+}
+.awards-icon {
+  width: 35%;
+  height: auto;
 }
