--- a/styles/container/content.module.scss
+++ b/styles/container/content.module.scss
@@ -10,7 +10,7 @@
     .expressionsList {
         display: grid;
         justify-items: center;
-
+        margin-block-end: 1.5em;
         .end {
             margin-block: 1.5em;
         }
