--- a/styles/container/auth.module.scss
+++ b/styles/container/auth.module.scss
@@ -57,5 +57,22 @@
                 }
             }
         }
+        .register {
+            text-align: center;
+            padding-block: 2.5em;
+            .registerButton{
+                text-decoration: none;
+                font-weight: bold;
+                text-transform: uppercase;
+                background-color: var(--button-color);
+                color: var(--text-color);
+                border-radius: 0.5em;
+                padding: 0.5em;
+                &:hover {
+                    background-color: var(--button-color-hover);;
+                }
+                
+            }
+        }
     }
 }
