--- a/styles/container/reg.module.scss
+++ b/styles/container/reg.module.scss
@@ -45,5 +45,22 @@
             }
                 
         }
+        .login {
+            text-align: center;
+            padding-block: 2.5em;
+            .loginButton{
+                text-decoration: none;
+                font-weight: bold;
+                text-transform: uppercase;
+                background-color: var(--button-color);
+                color: var(--text-color);
+                border-radius: 0.5em;
+                padding: 0.5em;
+                &:hover {
+                    background-color: var(--button-color-hover);;
+                }
+                
+            }
+        }
     }
 }
