--- a/styles/container/reg.module.scss
+++ b/styles/container/reg.module.scss
@@ -13,6 +13,7 @@
         .info {
             padding-block-end: 2em;
             padding-block-start: 1em;
+            padding-inline: 1em;
         }
         .infoAlert {
             color: red;
