--- a/styles/container/card.module.scss
+++ b/styles/container/card.module.scss
@@ -2,99 +2,98 @@
     width: 85%;
     margin-inline: auto;
     padding: 1em;
-    margin-inline: 0.8em;
     border-radius: 0.5em;
     background-color: var(--third-color);
     margin-block-start: 1.5em;
     text-align: left;
-
-    .expression {
-        font-weight: bold;
-        font-size: 1.6em;
-        cursor: pointer;
-        &:hover {
-            color: var(--clickable-color);
-        }
-    }          
-    .explication {
-        padding-block-start: 0.5em;
+    margin-inline: auto;
+}
+.expression {
+    font-weight: bold;
+    font-size: 1.6em;
+    cursor: pointer;
+    &:hover {
+        color: var(--clickable-color);
     }
-    .example {
-        font-style: italic;
-        padding-block-start: 0.8em;
+}          
+.explication {
+    padding-block-start: 0.5em;
+}
+.example {
+    font-style: italic;
+    padding-block-start: 0.8em;
+}
+.cardInfo {
+    padding-block-start: 1em;
+}
+.author {
+    font-weight: bold;
+    cursor: pointer;
+    color: var(--clickable-color);
+    &:hover {
+        color: var(--button-color-hover);
     }
-    .cardInfo {
-        padding-block-start: 1em;
-        .author {
-            font-weight: bold;
-            cursor: pointer;
-            color: var(--clickable-color);
-            &:hover {
-                color: var(--button-color-hover);
-            }
-        }
-        .date {
-            font-weight: bold;
-            color: var(--clickable-color);
-        }
+}
+.date {
+    font-weight: bold;
+    color: var(--clickable-color);
+}
+.likesSystem {
+    display: flex;
+    margin-block-start: 1em;
+}
+.likePart {
+    cursor: pointer;
+    display: flex;
+    min-width: 5em;
+    padding: 0.3em;
+    justify-content: space-around;
+    align-content: center;
+    text-decoration: none;
+    border-inline-end: 0.0625em solid var(--fourth-color);
+    border-inline-start: 0.0625em solid transparent;
+    border-block: 0.0625em solid transparent;
+    color: var(--text-color);
+    &:hover {
+        border-inline-start: 0.0625em solid var(--fourth-color);
+        border-block: 0.0625em solid var(--fourth-color);
+        border-bottom-left-radius: 0.5em;
+        border-top-left-radius: 0.5em;
     }
-    .likesSystem {
-        display: flex;
-        margin-block-start: 1em;
-        .likePart {
-            cursor: pointer;
-            display: flex;
-            min-width: 5em;
-            padding: 0.3em;
-            justify-content: space-around;
-            align-content: center;
-            text-decoration: none;
-            border-inline-end: 0.0625em solid var(--fourth-color);
-            border-inline-start: 0.0625em solid transparent;
-            border-block: 0.0625em solid transparent;
-            color: var(--text-color);
-            .likes {
-                margin-block: auto;
-                font-weight: bold;
-            }
-            &:hover {
-                border-inline-start: 0.0625em solid var(--fourth-color);
-                border-block: 0.0625em solid var(--fourth-color);
-                border-bottom-left-radius: 0.5em;
-                border-top-left-radius: 0.5em;
-            }
-        }
-        .likePartActive {
-            background-color: var(--button-color-hover);
-            border-start-start-radius: 0.5em;
-            border-end-start-radius: 0.5em;
-        }
-        .dislikePart {
-            cursor: pointer;
-            display: flex;
-            min-width: 5em;
-            padding: 0.3em;
-            justify-content: space-around;
-            align-content: center;
-            text-decoration: none;
-            color: var(--text-color);
-            border-inline-end: 0.0625em solid transparent;
-            border-block: 0.0625em solid transparent;
-            .dislikes {
-                margin-block: auto;
-                font-weight: bold;
-            }
-            &:hover {
-                border-inline-end: 0.0625em solid var(--fourth-color);
-                border-block: 0.0625em solid var(--fourth-color);
-                border-end-end-radius: 0.5em;
-                border-top-right-radius: 0.5em;
-            }
-        }
-        .dislikePartActive {
-            background-color: var(--button-color-hover);
-            border-end-end-radius: 0.5em;
-            border-top-right-radius: 0.5em;
-        }
+}
+.likes {
+    margin-block: auto;
+    font-weight: bold;
+}
+.likePartActive {
+    background-color: var(--button-color-hover);
+    border-start-start-radius: 0.5em;
+    border-end-start-radius: 0.5em;
+}
+.dislikePart {
+    cursor: pointer;
+    display: flex;
+    min-width: 5em;
+    padding: 0.3em;
+    justify-content: space-around;
+    align-content: center;
+    text-decoration: none;
+    color: var(--text-color);
+    border-inline-end: 0.0625em solid transparent;
+    border-block: 0.0625em solid transparent;
+    &:hover {
+        border-inline-end: 0.0625em solid var(--fourth-color);
+        border-block: 0.0625em solid var(--fourth-color);
+        border-end-end-radius: 0.5em;
+        border-top-right-radius: 0.5em;
     }
+}
+.dislikes {
+    margin-block: auto;
+    font-weight: bold;
+}
+.dislikePartActive {
+    background-color: var(--button-color-hover);
+    border-end-end-radius: 0.5em;
+    border-top-right-radius: 0.5em;
 }
