--- a/styles/container/modal.module.scss
+++ b/styles/container/modal.module.scss
@@ -10,18 +10,17 @@
         right: 50%;
         transform: translate(50%,-50%);
     }
-  }
+    p {
+        font-size: 1.5rem;
+        color: var(--text-color);
+        padding: 1em;
+    }
+}
   
-  .popup p {
-    font-size: 1.5rem;
-    color: var(--text-color);
-    padding: 1em;
-  }
-
-  .succes {
+.succes {
     background-color: rgba(58, 158, 33, 0.881);
-  }
+}
 
-  .fail {
+.fail {
     background-color: rgba(210, 64, 64, 0.881);
-  }
+}
