--- a/client/src/layouts/AuthLayout.module.scss
+++ b/client/src/layouts/AuthLayout.module.scss
@@ -17,3 +17,9 @@ $bg-image: '/assets/hero_image.jpg';
 .welcome-container {
     box-shadow: -1.5rem 1.5rem 0px var(--secondary-color);
 }
+.auth-wrapper {
+    box-shadow: -1.5rem 1.5rem 0px var(--secondary-color);
+}
+.auth-page {
+    font: 1rem var(--font-body);
+}
