--- a/client/src/styles/Recipes.module.scss
+++ b/client/src/styles/Recipes.module.scss
@@ -6,11 +6,12 @@
   padding: 1rem;
 }
 .create-recipe-form {
+  @apply rounded;
   max-width: 40rem;
   display: flex;
   flex-direction: column;
   background: var(--off-white);
-  box-shadow: -20px 20px 0px var(--secondary-color);
+  box-shadow: -1.25rem 1.25rem 0px var(--secondary-color);
   gap: 2rem;
   padding: 2rem;
 }
@@ -18,12 +19,11 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding-block: 2rem;
 }
 .form-element {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
+  gap: 0.5rem;
 }
 .label {
   font: 1rem var(--font-body);
@@ -32,7 +32,7 @@
   width: 100%;
   font: 1rem var(--font-body);
   border: 0;
-  border-block-end: 1px solid var(--color-pop);
+  border: 1px solid var(--color-pop);
   // resize: none;
   background: 0 0;
   padding: 0.5rem;
@@ -47,9 +47,9 @@
   resize: vertical;
   padding: 0.5rem;
   min-height: 5rem;
-  max-height: 30rem;
+  max-height: 20rem;
   background: 0;
-  border-block-end: 1px solid var(--color-pop);
+  border: 1px solid var(--color-pop);
   &:focus {
     outline: 0;
     background: var(--tertiary-color);
