--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -15,18 +15,43 @@
   --font-body: "Biryani", sans-serif;
   --body-text-color: #474747; /* Charcoal color for text/dark */
   --main-color: #f5f3ed; /* Oyster color for backgrounds */
-  --color-pop: rgba(215, 181, 140, 1); /* Honey color for contrast  */
+  --color-pop: rgb(215, 181, 140); /* Honey color for contrast  */
   --secondary-color: #e2d3c0; /* Toast color for dark accents */
   --tertiary-color: #eae3d9; /* Nude color for mid accents */
   --accent-color: rgba(43, 51, 73, 1); /*Dark blue for contrast accent */
   --off-white: #f9f7f4; /* Ivory color for light accents */
+  --color-red: indianred; /* Cherry bomb for favorites */
   --toastify-font-family: "Biryani", sans-serif !important;
 }
-
-/* * > * {
-  font: var(--font-body);
-} */
-
+html {
+  scroll-behavior: smooth;
+  background: var(--tertiary-color);
+}
+body::-webkit-scrollbar {
+  /* required - the "base" of the bar - mostly for setting width */
+  width: 0.85rem;
+}
+body::-webkit-scrollbar-track {
+  /* the "track" of the bar - great for customizing "background" colors */
+  border-radius: 0.5rem;
+  background: var(--main-color);
+}
+body::-webkit-scrollbar-thumb {
+  /* the actual draggable element, the star of the show! */
+  background: var(--color-pop);
+  border-radius: 0.5rem;
+}
+body::-moz-scrollbar {
+  width: 0.85rem;
+}
+body::-moz-scrollbar-thumb {
+  background: var(--color-pop);
+  border-radius: 0.5rem;
+}
+body::-moz-scrollbar-track {
+  border-radius: 0.5rem;
+  background: var(--main-color);
+}
 *, *::after, *::before {
   box-sizing: border-box;
 }
@@ -46,6 +71,7 @@ p {
   font-weight: 300;
 }
 .auth-wrapper {
+  @apply rounded;
   box-shadow: -1.5rem 1.5rem 0px var(--secondary-color);
 }
 .auth-page {
@@ -68,7 +94,7 @@ form {
   @apply w-full py-2 px-4;
 
   &:focus {
-    outline: 1px solid var(--accent-color);
+    outline: 1px solid var(--color-pop);
 
     ~ .icon {  /* Change property of sibling icon */
       opacity: 1; 
@@ -107,14 +133,36 @@ form {
   display: flex;
 }
 .home-wrap {
-  max-width: 75rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 1rem;
+  @apply mx-auto max-w-screen-lg flex flex-col gap-10 py-16 px-8;
+
+}
+
+.home-intro {
+  @apply flex flex-col justify-center gap-4 pb-8;
+
+  @media (min-width: 64rem) {
+    justify-content: flex-start;
+  }
+}
+.create-recipe-wrap {
+  @apply mx-auto w-full lg:max-w-7xl flex flex-col gap-6;
+
 }
 .recipes-list {
-  display: flex;
-  flex-direction: column;
-  gap: 4rem;
+  @apply flex flex-wrap gap-16 sm:justify-center justify-between;
+
+}
+.image-link {
+  cursor: pointer;
+}
+.logo-scale {
+  scale: 1.5;
+}
+.username-home {
+  color: var(--font-body);
+  font: 2rem var(--font-logo);
+  letter-spacing: 0.1em;
+  font-weight: 600;
+  padding-inline: 0.1em;
+  word-wrap: break-word;
 }
