--- a/auto-dealer/styles/globals.css
+++ b/auto-dealer/styles/globals.css
@@ -285,6 +285,18 @@ welcome-text {
   font-size: 1.25rem;
 }
 
+@media (min-width: 400px) and (max-width: 1810px) {
+  .product-title {
+    font-size: 1.5rem;
+  }
+  .card-structure {
+    width: 60vw;
+  }
+  .card-info {
+    gap: 0.75rem;
+  }
+}
+
 /* CAR PAGE */
 
 .car-page-layout {
