--- a/proiect-final/styles/Form.module.css
+++ b/proiect-final/styles/Form.module.css
@@ -7,7 +7,7 @@
 }
 .title {
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.3rem;
     padding: 1rem;
 }
 .contact_form {
@@ -34,32 +34,12 @@
     width: 90vw;
     gap: 0.2rem;
 }
-.form-group input {
-    width: 10vw;
-    border-radius: 0.3rem;
-}
-.checkbox-group {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-}
 .textarea {
     width: 100%;
     min-height: 30%;
     max-height: 40%;
     resize: vertical;
     border-radius: 0.3rem;
-}
-.btn_group {
-    width: 100vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
 }
 .button_style {
     background-color: pink;
@@ -80,6 +60,19 @@
     align-items: center;
     gap: 2rem;
     height: 65vh;
+}
+.form_style {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.btn_group, .checkbox_group {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
 }
 @media (min-width: 400px) {
     .form_group {
