--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -77,6 +77,9 @@ p {
   @media (max-width: 32rem){
     width: 85%;
   }
+  @media (max-width: 94rem){
+    width: 85%;
+  }
 }
 .auth-page {
   font: 1rem var(--font-body);
