--- a/src/pages/components/slider.module.css
+++ b/src/pages/components/slider.module.css
@@ -1,28 +1,24 @@
-.wrapper {
-  margin-top: 2rem;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1200px;
+.carouselItem {
+  text-align: center;
+  position: relative;
 }
 
-.CarouselItem {
-  height: 400px;
+.altText {
+  color: black;
+  font-size: 2rem;
 }
 
-@media (max-width: 767px) {
-  .CarouselItem {
-    height: 200px;
+.captionText {
+  color: blue;
+}
+
+
+@media (max-width: 600px) {
+  .carouselItem img {
+    width: 100%;
+    height: auto;
   }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  .CarouselItem {
-    height: 300px;
-  }
-}
-
-@media (min-width: 992px) {
-  .CarouselItem {
-    height: 400px;
-  }
+  
+  
+  
 }
