--- a/client/src/components/RecipeCard/RecipeCard.module.scss
+++ b/client/src/components/RecipeCard/RecipeCard.module.scss
@@ -16,6 +16,10 @@
         height: 20rem;
         width: 30rem;
         object-fit: cover;
+        background-image: url(https://images.unsplash.com/photo-1542010589005-d1eacc3918f2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1784&q=80);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
         transition: transform 0.2s ease-in-out;
 
         &:hover {
