--- a/client/src/pages/recipes/[slug].module.scss
+++ b/client/src/pages/recipes/[slug].module.scss
@@ -39,6 +39,10 @@ $number-bg-size: 1.25em;
     height: 20rem;
     width: 100%;
     object-fit: cover;
+    background-image: url(https://images.unsplash.com/photo-1542010589005-d1eacc3918f2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1784&q=80);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     box-shadow: -1.25rem 1.25rem 0px var(--secondary-color);
 }
 .ol {
