--- a/nextjs-blog/styles/Home.module.css
+++ b/nextjs-blog/styles/Home.module.css
@@ -51,6 +51,16 @@
   padding: 1rem;
 }
 
+.success {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60vh;
+  gap: 2rem;
+
+}
+
 .services {
   display: flex;
   flex-direction: row;
@@ -112,6 +122,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
   gap: 2rem;
 }
 
