--- a/nextjs-blog/styles/Home.module.css
+++ b/nextjs-blog/styles/Home.module.css
@@ -122,7 +122,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   gap: 2rem;
 }
 
